# PwR-Studio

./: .env-dev.template  .gitignore  README.md  docker-compose.yml  dump.sql
alembic/: env.py
alembic/versions/: 04b03b8df3bd_rename_column.py  3e403863733c_initial_revision.py
deployments/bicep/: README.md  main.bicep
deployments/bicep/modules/: engine.bicep  eventhub.bicep  gateway.bicep  postgres.bicep  server.bicep  storage.bicep  vnet.bicep
docs/: _config.yml  index.md
docs/assets/: pwr-studio-architecture.drawio  pwr-studio-hld.drawio
docs/explanations/: architecture.md  index.md
docs/how-tos/: engine.md  index.md  plugin.md
docs/tutorials/: msal.md  quickstart.md
lib/: pyproject.toml
lib/pwr_studio/: kafka_utils.py  types.py
lib/pwr_studio/engines/: __init__.py
lib/pwr_studio/representations/: __init__.py
plugin_examples/: housing_fsm.py  payment_plugin.py
scripts/: backup.sql  base_queries.sql  create-migration.sh  create-topic.sh  init-db.sh  read-message.sh  run.sh  send-message.sh
server/: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
server/app/: alembic.ini  blob_manager.py  chat_manager.py  crud.py  database.py  main.py  models.py  schemas.py  test.py  utils.py
server/app/alembic/: env.py
studio/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
studio/public/: manifest.json
studio/src/: api.ts  applicationInsightsService.tsx  authConfig.ts  constants.ts  i18n.ts  index.tsx
studio/src/components/: index.tsx
studio/src/hooks/: useConfig.js
studio/src/locales/: en.json  (+1 more)
(+36 files in other folders)
